// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Help component should be displayed as a successful message 1`] = `
<DocumentFragment>
  <span
    class="help is-success"
  >
    Default
  </span>
</DocumentFragment>
`;

exports[`Help component should concat classname in props with classname 1`] = `
<DocumentFragment>
  <span
    class="help other-class this-is-a-test"
  >
    Default
  </span>
</DocumentFragment>
`;

exports[`Help component should render 1`] = `
<DocumentFragment>
  <span
    class="help"
  />
</DocumentFragment>
`;

exports[`Help component should use inline styles 1`] = `
<DocumentFragment>
  <span
    class="help"
    style="height: 250px;"
  >
    Default
  </span>
</DocumentFragment>
`;
